--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.1.4",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
+    "force": "^0.0.3",
     "http": "^0.0.1-security",
     "imap-simple": "^1.6.3",
     "joi": "^18.0.1",
