--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.1.4",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
