--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.0.1",
     "pdfkit": "^0.17.2",
+    "playwright": "^1.57.0",
     "pm2": "^5.3.0",
     "winston": "^3.14.2",
     "winston-mongodb": "^5.1.1",
