--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.0.1",
+    "pdf-parse": "^2.4.5",
     "pdfkit": "^0.17.2",
     "playwright": "^1.57.0",
     "pm2": "^5.3.0",
