--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,36 +1,18 @@
-FROM node:22-alpine
-
-# Install Playwright dependencies (required for browsers)
-RUN apk add --no-cache \
-    chromium \
-    nss \
-    freetype \
-    freetype-dev \
-    harfbuzz \
-    ca-certificates \
-    ttf-freefont \
-    nodejs \
-    yarn
-
-# Tell Puppeteer to skip installing Chromium when installed post-install
-ENV PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true \
-    PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+FROM mcr.microsoft.com/playwright:v1.57.0-jammy
 
 WORKDIR /server
 
-# Copy package files
+# Only copy package files first (better layer cache)
 COPY package*.json ./
 
-# Install dependencies + Playwright browsers
+# Install production dependencies
 RUN npm ci --only=production
-RUN npx playwright install --with-deps chromium
 
-# Copy source code
+# Copy rest of the code
 COPY . .
-
-# Copy environment file
 COPY .env .env
 
 EXPOSE 9002
 
+# Use plain node in container, not nodemon
 CMD ["npm", "start"]
