--- a/client/package.json
+++ b/client/package.json
@@ -35,11 +35,14 @@
     "force": "^0.0.3",
     "formik": "^2.4.6",
     "framer-motion": "^12.23.6",
+    "fs": "^0.0.1-security",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "material-react-table": "^2.13.3",
+    "pdf-parse": "^2.4.5",
+    "pdf.js-extract": "^0.2.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
