--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "imap-simple": "^1.6.3",
     "joi": "^18.0.1",
     "mongoose": "^6.9.1",
+    "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "node-schedule": "^2.1.1",
