--- a/server/ecosystem.config.json
+++ b/server/ecosystem.config.json
@@ -5,7 +5,7 @@
       "script": "app.js",
       "watch": true,
       "env": {
-        "NODE_ENV": "server"
+        "NODE_ENV": "production"
       }
     }
   ]
