--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^6.3.0",
     "apexcharts": "^3.49.1",
     "aws-sdk": "^2.1475.0",
     "axios": "^1.12.2",
@@ -37,6 +38,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.23.6",
     "fs": "^0.0.1-security",
+    "html2pdf.js": "^0.14.0",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "leaflet": "^1.9.4",
