--- a/local-signer/pom.xml
+++ b/local-signer/pom.xml
@@ -42,6 +42,17 @@
       <artifactId>bcpkix-jdk18on</artifactId>
       <version>1.77</version>
     </dependency>
+    <!-- JAXB for Java 11+ -->
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.3.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
